; ModuleID = '/home/carl/AnghaBench/reactos/dll/directx/wine/wined3d/extr_ati_fragment_shader.c_set_tex_op_atifs.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/directx/wine/wined3d/extr_ati_fragment_shader.c_set_tex_op_atifs.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.wined3d_context = type { i64*, %struct.atifs_context_private_data*, %struct.wined3d_d3d_info*, %struct.wined3d_gl_info*, %struct.wined3d_device* }
%struct.atifs_context_private_data = type { %struct.atifs_ffp_desc* }
%struct.atifs_ffp_desc = type { i32, i32*, i32, %struct.TYPE_6__ }
%struct.TYPE_6__ = type { %struct.ffp_frag_settings }
%struct.ffp_frag_settings = type { %struct.TYPE_5__* }
%struct.TYPE_5__ = type { i64 }
%struct.wined3d_d3d_info = type { %struct.TYPE_4__ }
%struct.TYPE_4__ = type { i32 }
%struct.wined3d_gl_info = type { i32 }
%struct.wined3d_device = type { %struct.atifs_private_data* }
%struct.atifs_private_data = type { i32 }
%struct.wined3d_state = type { i32* }

@TRUE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [15 x i8] c"Out of memory\0A\00", align 1
@WINED3D_TOP_DISABLE = common dso_local global i64 0, align 8
@.str.1 = private unnamed_addr constant [60 x i8] c"Allocated fixed function replacement shader descriptor %p.\0A\00", align 1
@WINED3D_UNMAPPED_STAGE = common dso_local global i64 0, align 8
@MAX_TEXTURES = common dso_local global i32 0, align 4
@WINED3D_TSS_BUMPENV_MAT00 = common dso_local global i32 0, align 4
@WINED3D_RS_TEXTUREFACTOR = common dso_local global i32 0, align 4
@WINED3D_TSS_CONSTANT = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [30 x i8] c"Unexpected constant type %u.\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.wined3d_context*, %struct.wined3d_state*, i64)* @set_tex_op_atifs to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @set_tex_op_atifs(%struct.wined3d_context* %0, %struct.wined3d_state* %1, i64 %2) #0 {
  %4 = alloca %struct.wined3d_context*, align 8
  %5 = alloca %struct.wined3d_state*, align 8
  %6 = alloca i64, align 8
  %7 = alloca %struct.wined3d_device*, align 8
  %8 = alloca %struct.wined3d_gl_info*, align 8
  %9 = alloca %struct.wined3d_d3d_info*, align 8
  %10 = alloca %struct.atifs_context_private_data*, align 8
  %11 = alloca %struct.atifs_ffp_desc*, align 8
  %12 = alloca %struct.atifs_ffp_desc*, align 8
  %13 = alloca %struct.ffp_frag_settings, align 8
  %14 = alloca %struct.atifs_private_data*, align 8
  %15 = alloca i64, align 8
  %16 = alloca i32, align 4
  %17 = alloca %struct.atifs_ffp_desc*, align 8
  store %struct.wined3d_context* %0, %struct.wined3d_context** %4, align 8
  store %struct.wined3d_state* %1, %struct.wined3d_state** %5, align 8
  store i64 %2, i64* %6, align 8
  %18 = load %struct.wined3d_context*, %struct.wined3d_context** %4, align 8
  %19 = getelementptr inbounds %struct.wined3d_context, %struct.wined3d_context* %18, i32 0, i32 4
  %20 = load %struct.wined3d_device*, %struct.wined3d_device** %19, align 8
  store %struct.wined3d_device* %20, %struct.wined3d_device** %7, align 8
  %21 = load %struct.wined3d_context*, %struct.wined3d_context** %4, align 8
  %22 = getelementptr inbounds %struct.wined3d_context, %struct.wined3d_context* %21, i32 0, i32 3
  %23 = load %struct.wined3d_gl_info*, %struct.wined3d_gl_info** %22, align 8
  store %struct.wined3d_gl_info* %23, %struct.wined3d_gl_info** %8, align 8
  %24 = load %struct.wined3d_context*, %struct.wined3d_context** %4, align 8
  %25 = getelementptr inbounds %struct.wined3d_context, %struct.wined3d_context* %24, i32 0, i32 2
  %26 = load %struct.wined3d_d3d_info*, %struct.wined3d_d3d_info** %25, align 8
  store %struct.wined3d_d3d_info* %26, %struct.wined3d_d3d_info** %9, align 8
  %27 = load %struct.wined3d_context*, %struct.wined3d_context** %4, align 8
  %28 = getelementptr inbounds %struct.wined3d_context, %struct.wined3d_context* %27, i32 0, i32 1
  %29 = load %struct.atifs_context_private_data*, %struct.atifs_context_private_data** %28, align 8
  store %struct.atifs_context_private_data* %29, %struct.atifs_context_private_data** %10, align 8
  %30 = load %struct.atifs_context_private_data*, %struct.atifs_context_private_data** %10, align 8
  %31 = getelementptr inbounds %struct.atifs_context_private_data, %struct.atifs_context_private_data* %30, i32 0, i32 0
  %32 = load %struct.atifs_ffp_desc*, %struct.atifs_ffp_desc** %31, align 8
  store %struct.atifs_ffp_desc* %32, %struct.atifs_ffp_desc** %12, align 8
  %33 = load %struct.wined3d_device*, %struct.wined3d_device** %7, align 8
  %34 = getelementptr inbounds %struct.wined3d_device, %struct.wined3d_device* %33, i32 0, i32 0
  %35 = load %struct.atifs_private_data*, %struct.atifs_private_data** %34, align 8
  store %struct.atifs_private_data* %35, %struct.atifs_private_data** %14, align 8
  %36 = load %struct.wined3d_context*, %struct.wined3d_context** %4, align 8
  %37 = load %struct.wined3d_state*, %struct.wined3d_state** %5, align 8
  %38 = load i32, i32* @TRUE, align 4
  %39 = call i32 @gen_ffp_frag_op(%struct.wined3d_context* %36, %struct.wined3d_state* %37, %struct.ffp_frag_settings* %13, i32 %38)
  %40 = load %struct.atifs_private_data*, %struct.atifs_private_data** %14, align 8
  %41 = getelementptr inbounds %struct.atifs_private_data, %struct.atifs_private_data* %40, i32 0, i32 0
  %42 = call i64 @find_ffp_frag_shader(i32* %41, %struct.ffp_frag_settings* %13)
  %43 = inttoptr i64 %42 to %struct.atifs_ffp_desc*
  store %struct.atifs_ffp_desc* %43, %struct.atifs_ffp_desc** %11, align 8
  %44 = load %struct.atifs_ffp_desc*, %struct.atifs_ffp_desc** %11, align 8
  %45 = icmp ne %struct.atifs_ffp_desc* %44, null
  br i1 %45, label %103, label %46

46:                                               ; preds = %3
  %47 = call %struct.atifs_ffp_desc* @heap_alloc_zero(i32 32)
  store %struct.atifs_ffp_desc* %47, %struct.atifs_ffp_desc** %17, align 8
  %48 = icmp ne %struct.atifs_ffp_desc* %47, null
  br i1 %48, label %51, label %49

49:                                               ; preds = %46
  %50 = call i32 (i8*, ...) @ERR(i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str, i64 0, i64 0))
  br label %213

51:                                               ; preds = %46
  %52 = load %struct.atifs_ffp_desc*, %struct.atifs_ffp_desc** %17, align 8
  %53 = getelementptr inbounds %struct.atifs_ffp_desc, %struct.atifs_ffp_desc* %52, i32 0, i32 0
  store i32 0, i32* %53, align 8
  store i32 0, i32* %16, align 4
  br label %54

54:                                               ; preds = %77, %51
  %55 = load i32, i32* %16, align 4
  %56 = load %struct.wined3d_d3d_info*, %struct.wined3d_d3d_info** %9, align 8
  %57 = getelementptr inbounds %struct.wined3d_d3d_info, %struct.wined3d_d3d_info* %56, i32 0, i32 0
  %58 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %57, i32 0, i32 0
  %59 = load i32, i32* %58, align 4
  %60 = icmp ult i32 %55, %59
  br i1 %60, label %61, label %80

61:                                               ; preds = %54
  %62 = getelementptr inbounds %struct.ffp_frag_settings, %struct.ffp_frag_settings* %13, i32 0, i32 0
  %63 = load %struct.TYPE_5__*, %struct.TYPE_5__** %62, align 8
  %64 = load i32, i32* %16, align 4
  %65 = zext i32 %64 to i64
  %66 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %63, i64 %65
  %67 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %66, i32 0, i32 0
  %68 = load i64, i64* %67, align 8
  %69 = load i64, i64* @WINED3D_TOP_DISABLE, align 8
  %70 = icmp eq i64 %68, %69
  br i1 %70, label %71, label %72

71:                                               ; preds = %61
  br label %80

72:                                               ; preds = %61
  %73 = load %struct.atifs_ffp_desc*, %struct.atifs_ffp_desc** %17, align 8
  %74 = getelementptr inbounds %struct.atifs_ffp_desc, %struct.atifs_ffp_desc* %73, i32 0, i32 0
  %75 = load i32, i32* %74, align 8
  %76 = add i32 %75, 1
  store i32 %76, i32* %74, align 8
  br label %77

77:                                               ; preds = %72
  %78 = load i32, i32* %16, align 4
  %79 = add i32 %78, 1
  store i32 %79, i32* %16, align 4
  br label %54

80:                                               ; preds = %71, %54
  %81 = load %struct.atifs_ffp_desc*, %struct.atifs_ffp_desc** %17, align 8
  %82 = getelementptr inbounds %struct.atifs_ffp_desc, %struct.atifs_ffp_desc* %81, i32 0, i32 3
  %83 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %82, i32 0, i32 0
  %84 = bitcast %struct.ffp_frag_settings* %83 to i8*
  %85 = bitcast %struct.ffp_frag_settings* %13 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 8 %84, i8* align 8 %85, i64 8, i1 false)
  %86 = getelementptr inbounds %struct.ffp_frag_settings, %struct.ffp_frag_settings* %13, i32 0, i32 0
  %87 = load %struct.TYPE_5__*, %struct.TYPE_5__** %86, align 8
  %88 = load %struct.wined3d_gl_info*, %struct.wined3d_gl_info** %8, align 8
  %89 = load %struct.atifs_ffp_desc*, %struct.atifs_ffp_desc** %17, align 8
  %90 = getelementptr inbounds %struct.atifs_ffp_desc, %struct.atifs_ffp_desc* %89, i32 0, i32 1
  %91 = load i32*, i32** %90, align 8
  %92 = call i32 @gen_ati_shader(%struct.TYPE_5__* %87, %struct.wined3d_gl_info* %88, i32* %91)
  %93 = load %struct.atifs_ffp_desc*, %struct.atifs_ffp_desc** %17, align 8
  %94 = getelementptr inbounds %struct.atifs_ffp_desc, %struct.atifs_ffp_desc* %93, i32 0, i32 2
  store i32 %92, i32* %94, align 8
  %95 = load %struct.atifs_private_data*, %struct.atifs_private_data** %14, align 8
  %96 = getelementptr inbounds %struct.atifs_private_data, %struct.atifs_private_data* %95, i32 0, i32 0
  %97 = load %struct.atifs_ffp_desc*, %struct.atifs_ffp_desc** %17, align 8
  %98 = getelementptr inbounds %struct.atifs_ffp_desc, %struct.atifs_ffp_desc* %97, i32 0, i32 3
  %99 = call i32 @add_ffp_frag_shader(i32* %96, %struct.TYPE_6__* %98)
  %100 = load %struct.atifs_ffp_desc*, %struct.atifs_ffp_desc** %17, align 8
  %101 = call i32 @TRACE(i8* getelementptr inbounds ([60 x i8], [60 x i8]* @.str.1, i64 0, i64 0), %struct.atifs_ffp_desc* %100)
  %102 = load %struct.atifs_ffp_desc*, %struct.atifs_ffp_desc** %17, align 8
  store %struct.atifs_ffp_desc* %102, %struct.atifs_ffp_desc** %11, align 8
  br label %103

103:                                              ; preds = %80, %3
  store i32 0, i32* %16, align 4
  br label %104

104:                                              ; preds = %136, %103
  %105 = load i32, i32* %16, align 4
  %106 = load %struct.atifs_ffp_desc*, %struct.atifs_ffp_desc** %11, align 8
  %107 = getelementptr inbounds %struct.atifs_ffp_desc, %struct.atifs_ffp_desc* %106, i32 0, i32 0
  %108 = load i32, i32* %107, align 8
  %109 = icmp ult i32 %105, %108
  br i1 %109, label %110, label %139

110:                                              ; preds = %104
  %111 = load %struct.wined3d_context*, %struct.wined3d_context** %4, align 8
  %112 = getelementptr inbounds %struct.wined3d_context, %struct.wined3d_context* %111, i32 0, i32 0
  %113 = load i64*, i64** %112, align 8
  %114 = load i32, i32* %16, align 4
  %115 = zext i32 %114 to i64
  %116 = getelementptr inbounds i64, i64* %113, i64 %115
  %117 = load i64, i64* %116, align 8
  store i64 %117, i64* %15, align 8
  %118 = load i64, i64* %15, align 8
  %119 = load i64, i64* @WINED3D_UNMAPPED_STAGE, align 8
  %120 = icmp ne i64 %118, %119
  br i1 %120, label %121, label %135

121:                                              ; preds = %110
  %122 = load %struct.wined3d_context*, %struct.wined3d_context** %4, align 8
  %123 = load %struct.wined3d_gl_info*, %struct.wined3d_gl_info** %8, align 8
  %124 = load i64, i64* %15, align 8
  %125 = call i32 @context_active_texture(%struct.wined3d_context* %122, %struct.wined3d_gl_info* %123, i64 %124)
  %126 = load %struct.wined3d_state*, %struct.wined3d_state** %5, align 8
  %127 = getelementptr inbounds %struct.wined3d_state, %struct.wined3d_state* %126, i32 0, i32 0
  %128 = load i32*, i32** %127, align 8
  %129 = load i32, i32* %16, align 4
  %130 = zext i32 %129 to i64
  %131 = getelementptr inbounds i32, i32* %128, i64 %130
  %132 = load i32, i32* %131, align 4
  %133 = load %struct.wined3d_gl_info*, %struct.wined3d_gl_info** %8, align 8
  %134 = call i32 @texture_activate_dimensions(i32 %132, %struct.wined3d_gl_info* %133)
  br label %135

135:                                              ; preds = %121, %110
  br label %136

136:                                              ; preds = %135
  %137 = load i32, i32* %16, align 4
  %138 = add i32 %137, 1
  store i32 %138, i32* %16, align 4
  br label %104

139:                                              ; preds = %104
  %140 = load %struct.atifs_ffp_desc*, %struct.atifs_ffp_desc** %11, align 8
  %141 = getelementptr inbounds %struct.atifs_ffp_desc, %struct.atifs_ffp_desc* %140, i32 0, i32 2
  %142 = load i32, i32* %141, align 8
  %143 = call i32 @glBindFragmentShaderATI(i32 %142)
  %144 = call i32 @GL_EXTCALL(i32 %143)
  %145 = load %struct.atifs_ffp_desc*, %struct.atifs_ffp_desc** %11, align 8
  %146 = load %struct.atifs_context_private_data*, %struct.atifs_context_private_data** %10, align 8
  %147 = getelementptr inbounds %struct.atifs_context_private_data, %struct.atifs_context_private_data* %146, i32 0, i32 0
  store %struct.atifs_ffp_desc* %145, %struct.atifs_ffp_desc** %147, align 8
  store i32 0, i32* %16, align 4
  br label %148

148:                                              ; preds = %210, %139
  %149 = load i32, i32* %16, align 4
  %150 = load i32, i32* @MAX_TEXTURES, align 4
  %151 = icmp ult i32 %149, %150
  br i1 %151, label %152, label %213

152:                                              ; preds = %148
  %153 = load %struct.atifs_ffp_desc*, %struct.atifs_ffp_desc** %12, align 8
  %154 = icmp ne %struct.atifs_ffp_desc* %153, null
  br i1 %154, label %155, label %172

155:                                              ; preds = %152
  %156 = load %struct.atifs_ffp_desc*, %struct.atifs_ffp_desc** %12, align 8
  %157 = getelementptr inbounds %struct.atifs_ffp_desc, %struct.atifs_ffp_desc* %156, i32 0, i32 1
  %158 = load i32*, i32** %157, align 8
  %159 = load i32, i32* %16, align 4
  %160 = zext i32 %159 to i64
  %161 = getelementptr inbounds i32, i32* %158, i64 %160
  %162 = load i32, i32* %161, align 4
  %163 = load %struct.atifs_ffp_desc*, %struct.atifs_ffp_desc** %11, align 8
  %164 = getelementptr inbounds %struct.atifs_ffp_desc, %struct.atifs_ffp_desc* %163, i32 0, i32 1
  %165 = load i32*, i32** %164, align 8
  %166 = load i32, i32* %16, align 4
  %167 = zext i32 %166 to i64
  %168 = getelementptr inbounds i32, i32* %165, i64 %167
  %169 = load i32, i32* %168, align 4
  %170 = icmp eq i32 %162, %169
  br i1 %170, label %171, label %172

171:                                              ; preds = %155
  br label %210

172:                                              ; preds = %155, %152
  %173 = load %struct.atifs_ffp_desc*, %struct.atifs_ffp_desc** %11, align 8
  %174 = getelementptr inbounds %struct.atifs_ffp_desc, %struct.atifs_ffp_desc* %173, i32 0, i32 1
  %175 = load i32*, i32** %174, align 8
  %176 = load i32, i32* %16, align 4
  %177 = zext i32 %176 to i64
  %178 = getelementptr inbounds i32, i32* %175, i64 %177
  %179 = load i32, i32* %178, align 4
  switch i32 %179, label %200 [
    i32 130, label %180
    i32 128, label %187
    i32 129, label %193
  ]

180:                                              ; preds = %172
  %181 = load %struct.wined3d_context*, %struct.wined3d_context** %4, align 8
  %182 = load %struct.wined3d_state*, %struct.wined3d_state** %5, align 8
  %183 = load i32, i32* %16, align 4
  %184 = load i32, i32* @WINED3D_TSS_BUMPENV_MAT00, align 4
  %185 = call i32 @STATE_TEXTURESTAGE(i32 %183, i32 %184)
  %186 = call i32 @set_bumpmat(%struct.wined3d_context* %181, %struct.wined3d_state* %182, i32 %185)
  br label %209

187:                                              ; preds = %172
  %188 = load %struct.wined3d_context*, %struct.wined3d_context** %4, align 8
  %189 = load %struct.wined3d_state*, %struct.wined3d_state** %5, align 8
  %190 = load i32, i32* @WINED3D_RS_TEXTUREFACTOR, align 4
  %191 = call i32 @STATE_RENDER(i32 %190)
  %192 = call i32 @atifs_tfactor(%struct.wined3d_context* %188, %struct.wined3d_state* %189, i32 %191)
  br label %209

193:                                              ; preds = %172
  %194 = load %struct.wined3d_context*, %struct.wined3d_context** %4, align 8
  %195 = load %struct.wined3d_state*, %struct.wined3d_state** %5, align 8
  %196 = load i32, i32* %16, align 4
  %197 = load i32, i32* @WINED3D_TSS_CONSTANT, align 4
  %198 = call i32 @STATE_TEXTURESTAGE(i32 %196, i32 %197)
  %199 = call i32 @atifs_stage_constant(%struct.wined3d_context* %194, %struct.wined3d_state* %195, i32 %198)
  br label %209

200:                                              ; preds = %172
  %201 = load %struct.atifs_ffp_desc*, %struct.atifs_ffp_desc** %11, align 8
  %202 = getelementptr inbounds %struct.atifs_ffp_desc, %struct.atifs_ffp_desc* %201, i32 0, i32 1
  %203 = load i32*, i32** %202, align 8
  %204 = load i32, i32* %16, align 4
  %205 = zext i32 %204 to i64
  %206 = getelementptr inbounds i32, i32* %203, i64 %205
  %207 = load i32, i32* %206, align 4
  %208 = call i32 (i8*, ...) @ERR(i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str.2, i64 0, i64 0), i32 %207)
  br label %209

209:                                              ; preds = %200, %193, %187, %180
  br label %210

210:                                              ; preds = %209, %171
  %211 = load i32, i32* %16, align 4
  %212 = add i32 %211, 1
  store i32 %212, i32* %16, align 4
  br label %148

213:                                              ; preds = %49, %148
  ret void
}

declare dso_local i32 @gen_ffp_frag_op(%struct.wined3d_context*, %struct.wined3d_state*, %struct.ffp_frag_settings*, i32) #1

declare dso_local i64 @find_ffp_frag_shader(i32*, %struct.ffp_frag_settings*) #1

declare dso_local %struct.atifs_ffp_desc* @heap_alloc_zero(i32) #1

declare dso_local i32 @ERR(i8*, ...) #1

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #2

declare dso_local i32 @gen_ati_shader(%struct.TYPE_5__*, %struct.wined3d_gl_info*, i32*) #1

declare dso_local i32 @add_ffp_frag_shader(i32*, %struct.TYPE_6__*) #1

declare dso_local i32 @TRACE(i8*, %struct.atifs_ffp_desc*) #1

declare dso_local i32 @context_active_texture(%struct.wined3d_context*, %struct.wined3d_gl_info*, i64) #1

declare dso_local i32 @texture_activate_dimensions(i32, %struct.wined3d_gl_info*) #1

declare dso_local i32 @GL_EXTCALL(i32) #1

declare dso_local i32 @glBindFragmentShaderATI(i32) #1

declare dso_local i32 @set_bumpmat(%struct.wined3d_context*, %struct.wined3d_state*, i32) #1

declare dso_local i32 @STATE_TEXTURESTAGE(i32, i32) #1

declare dso_local i32 @atifs_tfactor(%struct.wined3d_context*, %struct.wined3d_state*, i32) #1

declare dso_local i32 @STATE_RENDER(i32) #1

declare dso_local i32 @atifs_stage_constant(%struct.wined3d_context*, %struct.wined3d_state*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
